# CISC361

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
_cmake/: AddClassExercise.cmake
_common/: bwait.h  prelude.h
_include/: common.h
cmake_scripts/: AddClassExercise.cmake  ExerciseRegistration.cmake
common/: lib.c  lib.h
fork/: main.c
hello_world/: main.c
src/: common.h  test.h
src/_common/: lib.c  lib.h  queue.c  queue.h  test.c  test_output.txt
src/_homework/fork_global_copied/: main.c  output.txt
src/_homework/fork_pthread/: main.c  output.txt
src/fork/: output.txt
src/scheduling/: lib.c  lib.h
src/scheduling/fcfs/: main.c  output.txt
src/scheduling/fcfs_priority/: main.c  output.txt
src/scheduling/round_robin/: main.c  output.txt
src/scheduling/round_robin_priority/: main.c  output.txt
src/semaphore/: main.c  output.txt
src/sum_time/multithreaded/: lib.c  output.txt
src/sum_time/singlethreaded/: main.c  output.txt
src/sum_time/time_analysis/: main.c  output.txt
sum_time/multithreaded/: lib.c  lib.h  main.c
sum_time/singlethreaded/: lib.c  lib.h  main.c
sum_time/time_analysis/: REPORT.md  main.c
